--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     testImplementation "org.mockito:mockito-core:2.23.0"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
     testImplementation 'android.arch.core:core-testing:1.1.1'
+    testImplementation "io.mockk:mockk:1.9.3.kotlin12"
 }
