--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 
 }
 
@@ -54,5 +57,5 @@ dependencies {
     testImplementation "org.mockito:mockito-core:2.23.0"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
     testImplementation 'android.arch.core:core-testing:1.1.1'
-    testImplementation "io.mockk:mockk:1.9.3.kotlin12"
+    testImplementation "org.mockito:mockito-inline:2.13.0"
 }
